--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-WTF==0.14.2
 gevent==1.4.0
 gevent-websocket==0.10.1
 greenlet==0.4.15
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
